fix: Removed scrollbar for react-flow screens

--- a/src/layout/FullHeightContainer.module.css
+++ b/src/layout/FullHeightContainer.module.css
@@ -4,5 +4,5 @@
 
     flex-grow: 1;
 
-    overflow-y: scroll;
+    overflow-y: auto;
 }
